Shaders: added attachable lights. Rename: renamed component to cell & refactoring to employ better oo.