@@ -1,30 +1,28 @@
 package dev.kabin.components;
 
 
-import dev.kabin.components.worldmodel.FloatArrayPool;
+import dev.kabin.components.worldmodel.FloatMatrixPool;
 import dev.kabin.components.worldmodel.IntMatrixPool;
-import dev.kabin.util.Functions;
 import dev.kabin.util.collections.Id;
 import dev.kabin.util.functioninterfaces.BiIntToFloatFunction;
 import dev.kabin.util.functioninterfaces.FloatUnaryOperation;
 import dev.kabin.util.functioninterfaces.IntBinaryOperator;
 import dev.kabin.util.linalg.FloatMatrix;
 import dev.kabin.util.linalg.IntMatrix;
-import dev.kabin.util.shapes.RectFloat;
 import dev.kabin.util.shapes.primitive.ImmutableRectInt;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.EnumMap;
 import java.util.List;
 import java.util.function.Consumer;
-import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import java.util.stream.IntStream;
 
 
 /**
- * Represents a quadratic component which may consist of 4 quadratic sub-components:
+ * Represents a quadratic cell which may consist of 4 quadratic sub-cells:
  * <pre>
  * ___________________________
  * |            |            |
@@ -36,7 +34,7 @@ import java.util.stream.IntStream;
  * |            |            |
  * |____________|____________|
  * </pre>
- * This instance will have sub-components iff the provided {@link ComponentParameters} have {@link ComponentParameters#hasSubcomponents()}
+ * This instance will have sub-components iff the provided {@link CellParameters} have {@link CellParameters#hasSubcomponents()}
  * equal to true.
  * <p>
  * In that case, we associate 0 -> (0,0), 1 -> (1,0), 2 -> (0,1), and 3 -> (1,1), where the pairs (m,n) determine the
@@ -48,34 +46,25 @@ import java.util.stream.IntStream;
  * [minX, maxX) x [minY, maxY). A point in then said to be contained in a component
  * if it is contained in [minX, maxX) x [minY, maxY) for that component.
  */
-public class Component implements Id {
+public class Cell implements Id {
 
+
+    private static final Logger logger = Logger.getLogger(Cell.class.getName());
     private static int instancesInitiated = 0;
-
-    private final static Function<Integer, Integer>
-            COMPONENT_INDEX_TO_X_MAPPING = integer -> integer % 2,
-            COMPONENT_INDEX_TO_Y_MAPPING = integer -> {
-                if (integer == 0 || integer == 1) return 0;
-                if (integer == 2 || integer == 3) return 1;
-                return null; // This should crash.
-            };
-
     private final int depth; // The level above root.
-    private final ComponentParameters parameters;
-    private final Component[] subComponents;
+    private final CellParameters parameters;
+    private final Cell[] subCells;
     private final EnumMap<Data, Object> data = new EnumMap<>(Data.class);
     private final int minX;
     private final int minY;
     private final ImmutableRectInt underlyingRectInt;
-    private final RectFloat underlyingRectFloat;
-    private final float scaleFactor;
     // Functions of primitives.
     private final EnumMap<Data, IntBinaryOperator> intDataMapperByKey = new EnumMap<>(Data.class);
-    private final EnumMap<Data, BiIntToFloatFunction> doubleDataMapperByKey = new EnumMap<>(Data.class);
+    private final EnumMap<Data, BiIntToFloatFunction> floatDataMapperByKey = new EnumMap<>(Data.class);
     private final int id;
     private boolean active = false;
 
-    private Component(@NotNull ComponentParameters parameters) {
+    private Cell(@NotNull CellParameters parameters) {
 
         id = instancesInitiated++;
 
@@ -86,35 +75,28 @@ public class Component implements Id {
 
         underlyingRectInt = new ImmutableRectInt(parameters.x(), parameters.y(), parameters.width() - 1,
                 parameters.height() - 1);
-        scaleFactor = parameters.scaleFactor();
-        underlyingRectFloat = new RectFloat(
-                parameters.x() * scaleFactor,
-                parameters.y() * scaleFactor,
-                parameters.width() * scaleFactor,
-                parameters.height() * scaleFactor
-        );
         minX = parameters.x();
         minY = parameters.y();
 
         this.parameters = parameters;
 
-        final List<ComponentParameters> componentParametersList = IntStream.range(0, 4).mapToObj(
-                integer -> ComponentParameters
-                        .builder()
-                        .setX(parameters.x() + COMPONENT_INDEX_TO_X_MAPPING.apply(integer) * parameters.width() / 2)
-                        .setY(parameters.y() + COMPONENT_INDEX_TO_Y_MAPPING.apply(integer) * parameters.height() / 2)
+        final List<CellParameters> cellParametersList = IntStream.range(0, 4)
+                .mapToObj(index -> CellParameters.builder(parameters.minimalCellSize())
+                        .setX(parameters.x() + cellIndexToXCoordinate(index) * parameters.width() / 2)
+                        .setY(parameters.y() + cellIndexToYCoordinate(index) * parameters.height() / 2)
                         .setWidth(parameters.width() / 2)
                         .setHeight(parameters.height() / 2)
-                        .setScaleFactor(scaleFactor)
+                        .setFloatArrayPool(parameters.floatMatrixPool())
+                        .setIntMatrixPool(parameters.intMatrixPool())
                         .build()
-        ).collect(Collectors.toList());
+                ).toList();
 
         // One has subcomponents <=> all have subcomponents.
-        if (componentParametersList.get(0).hasSubcomponents()) {
+        if (cellParametersList.get(0).hasSubcomponents()) {
 
-            subComponents = componentParametersList.stream()
-                    .map(Component::new)
-                    .toArray(Component[]::new);
+            subCells = cellParametersList.stream()
+                    .map(Cell::new)
+                    .toArray(Cell[]::new);
 
             final int midPointX = minX + parameters.width() / 2;
             final int midPointY = minY + parameters.height() / 2;
@@ -122,25 +104,25 @@ public class Component implements Id {
             // Glue functions together on boundaries:
             for (Data key : Data.values()) {
                 switch (key.getType()) {
-                    case FLOAT -> doubleDataMapperByKey.put(key, (x, y) -> {
+                    case FLOAT -> floatDataMapperByKey.put(key, (x, y) -> {
                         if (!contains(x, y)) return 0;
 
                         // See definition of adjacency in javadoc of this class.
                         if (x < midPointX) {
                             if (y < midPointY) {
                                 // Upper left square
-                                return subComponents[0].getDataFloat(x, y, key);
+                                return subCells[0].getDataFloat(x, y, key);
                             } else {
                                 // Lower left square
-                                return subComponents[2].getDataFloat(x, y, key);
+                                return subCells[2].getDataFloat(x, y, key);
                             }
                         } else {
                             if (y < midPointY) {
                                 // Upper right square
-                                return subComponents[1].getDataFloat(x, y, key);
+                                return subCells[1].getDataFloat(x, y, key);
                             } else {
                                 // Lower right square
-                                return subComponents[3].getDataFloat(x, y, key);
+                                return subCells[3].getDataFloat(x, y, key);
                             }
                         }
                     });
@@ -151,25 +133,25 @@ public class Component implements Id {
                         if (x < midPointX) {
                             if (y < midPointY) {
                                 // Upper left square
-                                return subComponents[0].getDataInt(x, y, key);
+                                return subCells[0].getDataInt(x, y, key);
                             } else {
                                 // Lower left square
-                                return subComponents[2].getDataInt(x, y, key);
+                                return subCells[2].getDataInt(x, y, key);
                             }
                         } else {
                             if (y < midPointY) {
                                 // Upper right square
-                                return subComponents[1].getDataInt(x, y, key);
+                                return subCells[1].getDataInt(x, y, key);
                             } else {
                                 // Lower right square
-                                return subComponents[3].getDataInt(x, y, key);
+                                return subCells[3].getDataInt(x, y, key);
                             }
                         }
                     });
                 }
             }
         } else {
-            subComponents = null;
+            subCells = null;
             for (Data key : Data.values()) {
                 switch (key.getType()) {
                     case INTEGER -> intDataMapperByKey.put(key, (x, y) -> {
@@ -179,8 +161,8 @@ public class Component implements Id {
                             return (dataForKey != null) ? dataForKey.get(i, j) : 0;
                         } else return 0;
                     });
-                    case FLOAT -> doubleDataMapperByKey.put(key, (x, y) -> {
-                        if (underlyingRectFloat.contains(x, y)) {
+                    case FLOAT -> floatDataMapperByKey.put(key, (x, y) -> {
+                        if (underlyingRectInt.contains(x, y)) {
                             final int i = x - minX, j = y - minY;
                             final FloatMatrix dataForKey = (FloatMatrix) data.get(key);
                             return (dataForKey != null) ? dataForKey.get(i, j) : 0.0f;
@@ -192,17 +174,48 @@ public class Component implements Id {
 
         // Figure out the depth of this component.
         int depth = 0;
-        Component componentStack = this;
+        Cell cellStack = this;
 
-        while (componentStack.subComponents != null) {
-            componentStack = componentStack.subComponents[0];
+        while (cellStack.subCells != null) {
+            cellStack = cellStack.subCells[0];
             depth++;
         }
         this.depth = depth;
     }
 
-    public static Component make(ComponentParameters parameters) {
-        return new Component(parameters);
+    private static int cellIndexToXCoordinate(int index) {
+        return index % 2;
+    }
+
+    private static int cellIndexToYCoordinate(int index) {
+        if (index == 0 || index == 1) return 0;
+        if (index == 2 || index == 3) return 1;
+        throw new IllegalArgumentException();
+    }
+
+
+    @NotNull
+    public static Cell makeRepresentationOf(int width,
+                                            int height,
+                                            int minimalCellSize,
+                                            int poolObjectsAvailable) {
+        final var intMatrixPool = new IntMatrixPool(poolObjectsAvailable, () -> new IntMatrix(minimalCellSize, minimalCellSize));
+        final var floatMatrixPool = new FloatMatrixPool(poolObjectsAvailable, () -> new FloatMatrix(minimalCellSize, minimalCellSize));
+        int x = minimalCellSize, y = minimalCellSize;
+        while (x < width * 2 || y < height * 2) {
+            x *= 2;
+            y *= 2;
+        }
+        logger.log(Level.WARNING, "Creating components with dimensions {" + x + ", " + y + "}");
+        return new Cell(CellParameters
+                .builder(minimalCellSize)
+                .setX(-x / 2)
+                .setY(-y / 2)
+                .setWidth(x)
+                .setHeight(y)
+                .setIntMatrixPool(intMatrixPool)
+                .setFloatArrayPool(floatMatrixPool)
+                .build());
     }
 
 
@@ -213,19 +226,19 @@ public class Component implements Id {
     /**
      * @return an unmodifiable view of sub-components.
      */
-    public List<Component> getSubComponents() {
-        return List.of(subComponents);
+    public List<Cell> getSubComponents() {
+        return List.of(subCells);
     }
 
-    public void forEachMatching(Consumer<Component> action, Predicate<Component> condition) {
-        if (condition.test(subComponents[0])) action.accept(subComponents[0]);
-        if (condition.test(subComponents[1])) action.accept(subComponents[1]);
-        if (condition.test(subComponents[2])) action.accept(subComponents[2]);
-        if (condition.test(subComponents[3])) action.accept(subComponents[3]);
+    public void forEachMatching(Consumer<Cell> action, Predicate<Cell> condition) {
+        if (condition.test(subCells[0])) action.accept(subCells[0]);
+        if (condition.test(subCells[1])) action.accept(subCells[1]);
+        if (condition.test(subCells[2])) action.accept(subCells[2]);
+        if (condition.test(subCells[3])) action.accept(subCells[3]);
     }
 
     public boolean hasSubComponents() {
-        return subComponents != null;
+        return subCells != null;
     }
 
     public int getPositionX() {
@@ -244,10 +257,6 @@ public class Component implements Id {
         return parameters.height();
     }
 
-    public RectFloat getUnderlyingRectFloat() {
-        return underlyingRectFloat;
-    }
-
     /**
      * Returns true if [minX, maxX) and [minY, maxY) contains the point (x,y) evaluated.
      */
@@ -255,14 +264,13 @@ public class Component implements Id {
         return underlyingRectInt.contains(x, y);
     }
 
-    public float getDataFloat(int x, int y, @NotNull Component.Data key) {
-        return doubleDataMapperByKey.get(key).eval(x, y);
+    public float getDataFloat(int x, int y, @NotNull Cell.Data key) {
+        return floatDataMapperByKey.get(key).eval(x, y);
     }
 
-    public int getDataInt(int x, int y, @NotNull Component.Data key) {
+    public int getDataInt(int x, int y, @NotNull Cell.Data key) {
         return intDataMapperByKey.get(key).eval(x, y);
     }
-
 
 
     @Override
@@ -279,25 +287,25 @@ public class Component implements Id {
     }
 
     public float getVectorFieldX(int x, int y) {
-        return doubleDataMapperByKey.get(Data.VECTOR_FIELD_X).eval(x, y);
+        return floatDataMapperByKey.get(Data.VECTOR_FIELD_X).eval(x, y);
     }
 
     public float getVectorFieldY(int x, int y) {
-        return doubleDataMapperByKey.get(Data.VECTOR_FIELD_Y).eval(x, y);
+        return floatDataMapperByKey.get(Data.VECTOR_FIELD_Y).eval(x, y);
     }
 
     public void modifyVectorFieldAt(int x, int y, FloatUnaryOperation transformX, FloatUnaryOperation transformY) {
         if (contains(x, y)) {
             if (hasSubComponents()) {
-                for (Component c : subComponents) {
+                for (Cell c : subCells) {
                     c.modifyVectorFieldAt(x, y, transformX, transformY);
                 }
             } else {
                 if (!data.containsKey(Data.VECTOR_FIELD_X)) {
-                    data.put(Data.VECTOR_FIELD_X, FloatArrayPool.getInstance().borrow());
+                    data.put(Data.VECTOR_FIELD_X, parameters.floatMatrixPool().borrow());
                 }
                 if (!data.containsKey(Data.VECTOR_FIELD_Y)) {
-                    data.put(Data.VECTOR_FIELD_Y, FloatArrayPool.getInstance().borrow());
+                    data.put(Data.VECTOR_FIELD_Y, parameters.floatMatrixPool().borrow());
                 }
                 final int
                         i = x - minX,
@@ -311,7 +319,7 @@ public class Component implements Id {
     public void activate(int x, int y) {
         if (contains(x, y)) {
             if (hasSubComponents()) {
-                for (Component c : subComponents) {
+                for (Cell c : subCells) {
                     c.activate(x, y);
                 }
             } else {
@@ -325,12 +333,12 @@ public class Component implements Id {
     public void increment(int x, int y, Data key) {
         if (contains(x, y)) {
             if (hasSubComponents()) {
-                for (Component c : subComponents) {
+                for (Cell c : subCells) {
                     c.increment(x, y, key);
                 }
             } else {
                 if (!data.containsKey(key)) {
-                    data.put(key, IntMatrixPool.getInstance().borrow());
+                    data.put(key, parameters.intMatrixPool().borrow());
                 }
 
                 ((IntMatrix) data.get(key)).increment(x - minX, y - minY);
@@ -344,7 +352,7 @@ public class Component implements Id {
      */
     public void clearData() {
         if (hasSubComponents()) {
-            for (Component c : subComponents) {
+            for (Cell c : subCells) {
                 c.clearData();
             }
         } else {
@@ -352,25 +360,25 @@ public class Component implements Id {
             {
                 Object o = data.get(Data.COLLISION);
                 if (o != null) {
-                    IntMatrixPool.getInstance().giveBack((IntMatrix) o);
+                    parameters.intMatrixPool().giveBack((IntMatrix) o);
                 }
             }
             {
                 Object o = data.get(Data.LADDER);
                 if (o != null) {
-                    IntMatrixPool.getInstance().giveBack((IntMatrix) o);
+                    parameters.intMatrixPool().giveBack((IntMatrix) o);
                 }
             }
             {
                 Object o = data.get(Data.VECTOR_FIELD_X);
                 if (o != null) {
-                    FloatArrayPool.getInstance().giveBack((FloatMatrix) o);
+                    parameters.floatMatrixPool().giveBack((FloatMatrix) o);
                 }
             }
             {
                 Object o = data.get(Data.VECTOR_FIELD_Y);
                 if (o != null) {
-                    FloatArrayPool.getInstance().giveBack((FloatMatrix) o);
+                    parameters.floatMatrixPool().giveBack((FloatMatrix) o);
                 }
             }
             data.clear();
@@ -382,13 +390,13 @@ public class Component implements Id {
         return "{" +
                 "id: " + id +
                 ", x: " + underlyingRectInt.getMinX() +
-                ", y: " + underlyingRectInt.getMinY() +  "}";
+                ", y: " + underlyingRectInt.getMinY() + "}";
     }
 
     public void decrement(int x, int y, Data key) {
         if (contains(x, y)) {
             if (hasSubComponents()) {
-                for (Component c : subComponents) {
+                for (Cell c : subCells) {
                     c.decrement(x, y, key);
                 }
             } else {
@@ -429,10 +437,6 @@ public class Component implements Id {
         else return (isCollisionAt(x, y));
     }
 
-    public boolean collisionForScaledCoordinatesAt(float x, float y) {
-        return isCollisionAt(Functions.toIntDivideBy(x, scaleFactor), Functions.toIntDivideBy(y, scaleFactor));
-    }
-
     public void increaseVectorFieldXAt(int x, int y) {
         increment(x, y, Data.VECTOR_FIELD_X);
     }
@@ -462,16 +466,16 @@ public class Component implements Id {
     }
 
 
-    public boolean isActive(){
+    public boolean isActive() {
         return active;
-    }
-
-    public boolean isInactive(){
-        return !active;
     }
 
     public void setActive(boolean b) {
         this.active = b;
+    }
+
+    public boolean isInactive() {
+        return !active;
     }
 
     @Override
